--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -30,6 +30,21 @@
 % Macros
 \newcommand{\comment}[1]{}
 
+\newcommand{\inlineeq}[1]{
+$
+\!
+\begin{aligned}[t]
+#1
+\end{aligned}
+$
+}
+
+\newcommand{\myeq}[1]{
+\begin{align*}
+#1
+\end{align*}
+}
+
 % pdfpages - Einstellungen (Notizen)
 %\setbeameroption{hide notes} % Only slides
 %\setbeameroption{show only notes} % Only notes
