--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -26,6 +26,10 @@
 \usepackage{blindtext}
 \usepackage{graphicx}
 \usepackage{pgfpages} % Notizen am Rand
+\usepackage[nocenter]{qtree} % Baum 1
+\usepackage{tree-dvips} % Baum 2
+%\usepackage{tikz-qtree}
+
 
 % Macros
 \newcommand{\comment}[1]{}
