--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -29,7 +29,7 @@
 \usepackage[nocenter]{qtree} % Baum 1
 \usepackage{tree-dvips} % Baum 2
 %\usepackage{tikz-qtree}
-
+\usepackage{forest}
 
 % Macros
 \newcommand{\comment}[1]{}
