--- a/slides/tex/aktuelleEntwicklung/recurrentNN/recurrentNN.tex
+++ b/slides/tex/aktuelleEntwicklung/recurrentNN/recurrentNN.tex
@@ -2,5 +2,35 @@
 
 \begin{frame}
 \frametitle{Recurrent Neural Network}
-\blindtext
+
+\begin{itemize}
+\item Bekommen sowohl von Eingangssignale sowohl durch Trainingsdatensatz als auch durch Rückkopplungen. 
+\end{itemize}
+
+\begin{columns}
+\hspace{10mm}
+
+\begin{column}{.6\textwidth}
+
+\begin{figure}
+	\includegraphics[width=\linewidth]{./aktuelleEntwicklung/recurrentNN/img/rnn_aufbau_alpha}
+\end{figure}
+
+\end{column}
+\begin{column}{.4\textwidth}
+
+\vspace{-24mm}
+
+\begin{itemize}
+\item Mustererkennung
+\item Muster ergänzen
+\item Sprachanalyse
+\end{itemize}
+\end{column}
+
+\end{columns}
+
+\note[item]{Bisher nur feedforward NN}
+\note[item]{Hierbei Reihenfolge von Bedeutung}
+
 \end{frame}
