--- a/slides/tex/slides_main.tex
+++ b/slides/tex/slides_main.tex
@@ -89,7 +89,9 @@ $
 \maketitle
 
 \begin{frame}[standout]
-Fragen?
+
+
+{\normalsize Alle Meterialen sind unter folgender URL zu finden: \\ \url{https://github.com/derMacon/deeplearning_seminar}}
 \end{frame}
 
 
@@ -111,6 +113,5 @@ Fragen?
   \bibliography{../../verweise/verweise}
   \bibliographystyle{abbrv}
 \end{frame}
-
 
 \end{document}
